codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__command_center__live_center_show_more.snap
---
source: tui/src/app/agent_center_tests.rs
assertion_line: 572
expression: "screen(&view, 80, 12)"
---
  Agent command center  Group: Project  g
   All 1   Needs you 0   Working 0   Ready 0   Inactive 1
  ────────────────────────────────────────────────────────────────────────────
      Tasks                        Model               Status         Updated
  /tmp/project  1
    ○ Recent task                  Unknown             Inactive        2m ago

  ›   Show more



  ? help  esc back  ↑/↓ move  enter open  n new
